# llm-based-multimodality-experiments

./: .gitignore  README.md  main.py  pyproject.toml
MMDocIR/: README.md  encode.py  index.html  main.py  metric_eval.py  search.py  text_wrapper.py  vision_wrapper.py
MMDocIR/scripts/: download_dataset.sh  download_model.sh  encode.sh  evaluate.sh
